# KeyCARE

./: .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml  requirements.txt
biotermcategorizer/: RelExtractor.py  TermExtractor.py  termextractor_pipeline.py  test.py  test_relations_transformers.py  train_relations_transformers.py
biotermcategorizer/categorizers/: Categorizer.py  Clustering.py  SetFitClassifier.py  StandardClassifier.py  TransformersClassifier.py
biotermcategorizer/extractors/: Extractor.py  KeyBertExtractor.py  RakeExtractor.py  TextRankExtractor.py  YakeExtractor.py
biotermcategorizer/relators/: Relator.py  SetFitRelator.py  TransformersRelator.py
biotermcategorizer/tests/: test_join.py  test_rake.py  test_relations_transformers.py  test_textrank.py  test_yake.py
biotermcategorizer/utils/: data_structures.py
data/toy_data/: testdata.tsv  traindata.tsv
nbs/: Keybert_seeds.ipynb  Pipeline.ipynb  Pruebas_modelos_entrenados.ipynb  Pruebas_modelos_entrenados2.ipynb  Tutorial.ipynb  Tutorial_RelExtractor.ipynb  Tutorial_TermExtractor.ipynb  Tutorial_extraction.ipynb  archivo.txt  class_predictions.ipynb  dev_initial.ipynb  mesinesp.ipynb  proves_relations.ipynb  relextractor.ipynb  sketch_class.ipynb  testsrelations.ipynb  train_test_dataset.ipynb  trained_model
src/categorizers/: Categorizer.py  Clustering.py  SetFitClassifier.py
src/extractors/: RakeExtractor.py  YakeExtractor.py
src/keycare/: RelExtractor.py  TermExtractor.py
src/keycare/categorizers/: SetFitClassifier.py  TransformersClassifier.py
src/keycare/extractors/: Extractor.py  KeyBertExtractor.py  (+1 more)
src/relators/: TransformersRelator.py
src/tests/: termextractor_pipeline.py
src/utils/: data_structures.py
(+1 files in other folders)
